feat: add support for JDK 21