@@ -27,6 +27,9 @@ RUN npm run build
 COPY backend ./backend/
 RUN cd backend && npm run build
 
+FROM eclipse-temurin:21-alpine AS jdk-21
+RUN /opt/java/openjdk/bin/jlink --output /opt/jre-21 --compress=2 --no-header-files --no-man-pages --module-path ../jmods --add-modules java.base,java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.management.rmi,java.naming,java.net.http,java.prefs,java.rmi,java.scripting,java.se,java.security.jgss,java.security.sasl,java.smartcardio,java.sql,java.sql.rowset,java.transaction.xa,java.xml,java.xml.crypto,jdk.crypto.cryptoki,jdk.crypto.ec,jdk.security.auth,jdk.unsupported,jdk.zipfs
+
 FROM eclipse-temurin:17-alpine AS jdk-17
 RUN /opt/java/openjdk/bin/jlink --output /opt/jre-17 --compress=2 --no-header-files --no-man-pages --module-path ../jmods --add-modules java.base,java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.management.rmi,java.naming,java.net.http,java.prefs,java.rmi,java.scripting,java.se,java.security.jgss,java.security.sasl,java.smartcardio,java.sql,java.sql.rowset,java.transaction.xa,java.xml,java.xml.crypto,jdk.crypto.cryptoki,jdk.crypto.ec,jdk.security.auth,jdk.unsupported,jdk.zipfs
 
@@ -38,9 +41,10 @@ RUN apk --no-cache add curl
 RUN apk add --no-cache java-cacerts
 ENV JAVA_HOME=/opt/java
 ENV PATH=/opt/java/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+COPY --from=jdk-21 /opt/jre-21 /opt/java-21
 COPY --from=jdk-17 /opt/jre-17 /opt/java-17
 COPY --from=jdk-11 /opt/jre-11 /opt/java-11
-RUN ln -s /opt/java-17 /opt/java
+RUN ln -s /opt/java-21 /opt/java
 RUN apk add --update nodejs npm
 # Set working directory.
 WORKDIR /usr/games/blockcluster
